--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "dotenv": "^4.0.0",
+    "elasticsearch": "^13.2.0",
     "firebase-admin": "^5.1.0"
   }
 }
