--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "assert": "^1.4.1",
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "elasticsearch": "^13.2.0",
+    "express": "^4.15.3",
     "firebase-admin": "^5.1.0"
   }
 }
