Move build command into angular project

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "preinstall": "npm install -g angular-cli",
+    "postinstall": "ng build --env=prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
