--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "rikusv@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@google/maps": "^0.4.3",
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
